# gltest

./: CMakeLists.txt
t1/: t1.cpp
t2/: t2.cpp  t2.fragmentshader
t3/: t3.cpp  t3.fragmentshader  t3.vertexshader
t5/: t5.cpp
